// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address component should renders correctly 1`] = `
<Styled(BodyCopy)
  className="sample-class"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize="fs14"
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={Object {}}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="addressTile__name"
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    test test
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    addressline 1
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    addressline 2
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    test city, test state 111-111
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    test country
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    1234567890
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;

exports[`Address component should renders correctly when optional fields are not present 1`] = `
<Styled(BodyCopy)
  className="sample-class"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize="fs14"
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={Object {}}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="addressTile__name"
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    test test
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    addressline 1
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    addressline 2
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={Object {}}
    textAlign="left"
  >
    test city, test state 111-111
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;
